--- a/client/main.html
+++ b/client/main.html
@@ -4,6 +4,8 @@
 
 <body>
   <h1>WP site customer form</h1>
+  <h3>Doesn't matter what inputs you enter, the idea is to be able to validate the form for different AJAX responses</h3>
+  <hr />
   <div id="ninja_forms_form_32_all_fields_wrap" class="ninja-forms-all-fields-wrap">
     <div class="field-wrap text-wrap label-above" id="ninja_forms_field_234_div_wrap" data-visible="1">
       <input type="hidden" id="ninja_forms_field_234_type" value="text">
